--- a/mission_to_mars_flask/login.html
+++ b/mission_to_mars_flask/login.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>User Login</title>
+  </head>
+  <body align = "center">
+    <form action="<?php echo htmlspecialchars(
+      $_SERVER["PHP_SELF"])?>" method="post">
+      <h1>User Login</h1>
+      Username: <input type="text" name="name">
+      <br><br>
+      Password: <input type="password" name="
+      password"><br><br>
+
+      <input type="submit" name="submit" value="Login">
+    </form>
+
+  </body>
 </html>
