Login and Signup for employees is working

--- a/mission_to_mars_flask/feature1.html
+++ b/mission_to_mars_flask/feature1.html
@@ -1,6 +1,4 @@
-print("Content-Type： text/html")
-print()
-print("""
+"Content-Type： text/html"
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -193,4 +191,3 @@ print("""
 
   </body>
   </html>
-""")
